<resources>
    <string name="app_name">PickUpOwner</string>
    <string name="image_banner">Image banner</string>
    <string name="area">Area</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="order">Order</string>
    <string name="process">Process</string>
    <string name="history">History</string>
    <string name="product1">Product 1</string>
    <string name="product2">Product 2</string>
    <string name="home">Home</string>
    <string name="employee">Petugas</string>
    <string name="news">News</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="phone">phone</string>
    <string name="phone_ex">856xxxxxx</string>
    <string name="password">password</string>
    <string name="forget_password">Lupa password</string>
    <string name="phone_verification">Verifikasi Handphone</string>
    <string name="input_phone_number">Input Nomor Handphone</string>
    <string name="submit">Kirim</string>
    <string name="register">Daftar</string>
    <string name="pass_confrm">Konfirmasi password</string>
    <string name="save">Simpan</string>
    <string name="address">Alamat</string>
    <string name="empty">Kosong!!</string>
    <string name="input_code_sms">Masukan code yang diterima melalui Sms</string>
    <string name="otp_code">Kode Otp</string>
    <string name="otp_message">Belum menerima kode? Kirim ulang</string>
    <string name="date">Tgl</string>
    <string name="back">Back</string>
    <string name="order_data">Data Order</string>
    <string name="zero">0</string>
    <string name="kec">Kecamatan</string>
    <string name="detail_order">Detail Order</string>
    <string name="date_ex">26-05-2023</string>
    <string name="time_ex">14:30</string>
    <string name="pickUp">Diambil</string>
    <string name="employee_name">nama petugas</string>
    <string name="sendDate">Dikirim</string>
    <string name="recipient">Penerima</string>
    <string name="cost">Biaya</string>
    <string name="not_finish">belum selesai</string>
    <string name="see_map">Lihat peta</string>
    <string name="take_order">Ambil Order</string>
    <string name="see_stnk">Lihat Stnk</string>
    <string name="send_order">Kirim</string>
    <string name="take_photo">Ambil foto</string>
    <string name="send_image">Photo pengiriman</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="camera_button">camera button</string>
    <string name="take">Ambil Photo</string>
    <string name="stnk_image">Image letter</string>
    <string name="finishing">Selesaikan</string>
    <string name="wait">Tunggu sebentar .....</string>
    <string name="sta">Sta</string>
    <string name="profile_image">Image Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="choose">Pilih</string>
    <string name="logout">Logout</string>
    <string name="input_banner">Input Banner</string>
    <string name="back_button">Button back</string>
    <string name="input_admob">Input Iklan</string>
    <string name="input_adv">Input Iklan</string>
    <string name="delete">Hapus</string>
    <string name="admob">iklan</string>
    <string name="description">Keterangan</string>
    <string name="input_advertising">Input Advertising</string>
    <string name="adv">Iklan</string>
    <string name="title">Judul</string>
    <string name="detail_employee">Detail Karyawan</string>
    <string name="add_job">Tambahkan Pekerjaan</string>
    <string name="report">Laporan</string>
</resources>