<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="1dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:textColor="@color/black"
            android:text="@string/area"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:textColor="@color/black"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_order_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:textColor="@color/black"
            android:text="@string/order"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/v_margin"
                android:textColor="@color/black"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="@dimen/m_70"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/six_m"
                android:textColor="@color/black"
                android:text="@string/time_ex"/>
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/v_margin"
                android:layout_marginStart="@dimen/six_m"
                android:textColor="@color/teal_700"
                android:text="@string/status"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>