<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.employee.DetailEmpActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:id="@+id/lay_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/v_margin"
                android:contentDescription="@string/back"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_arrow_back_ios_new_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/m_70"
                android:text="@string/detail_employee"/>
            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/fifty"
                android:layout_height="@dimen/fifty"
                android:contentDescription="@string/delete"
                android:src="@drawable/baseline_delete_forever_24"
                android:backgroundTint="@color/white"
                android:layout_marginStart="@dimen/twenty"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_first"
        android:layout_marginTop="@dimen/thirty"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:layout_marginEnd="@dimen/v_margin"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/person24"
            android:drawablePadding="@dimen/v_margin"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:layout_marginEnd="@dimen/v_margin"
            android:layout_marginTop="@dimen/six_m"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/baseline_person_pin_circle_24"
            android:drawablePadding="@dimen/v_margin"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:layout_marginEnd="@dimen/v_margin"
            android:layout_marginTop="@dimen/six_m"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/baseline_phone_24"
            android:drawablePadding="@dimen/v_margin"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:layout_marginEnd="@dimen/v_margin"
            android:layout_marginTop="@dimen/six_m"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/person24"
            android:drawablePadding="@dimen/v_margin"
            android:text="@string/status"/>
        <TextView
            android:id="@+id/tv_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/v_margin"
            android:layout_marginEnd="@dimen/v_margin"
            android:layout_marginTop="@dimen/six_m"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/baseline_person_pin_circle_24"
            android:drawablePadding="@dimen/v_margin"
            android:text="@string/area"/>
        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/m_150"
            android:layout_height="@dimen/m_200"
            android:contentDescription="@string/employee"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/twenty"
            android:src="@drawable/baseline_account_box_100"/>

    </LinearLayout>

</RelativeLayout>