<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifty"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/login"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/m_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/phone"
        app:boxCornerRadiusBottomEnd="@dimen/v_margin"
        app:boxCornerRadiusBottomStart="@dimen/v_margin"
        app:boxCornerRadiusTopEnd="@dimen/v_margin"
        app:boxCornerRadiusTopStart="@dimen/v_margin"
        app:endIconMode="clear_text"
        app:startIconTint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone"
            android:layout_width="@dimen/m_300"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/phone"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textAlignment="center"
        android:text="@string/phone_ex"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/m_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="@dimen/v_margin"
        app:boxCornerRadiusBottomStart="@dimen/v_margin"
        app:boxCornerRadiusTopEnd="@dimen/v_margin"
        app:boxCornerRadiusTopStart="@dimen/v_margin"
        app:startIconTint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="@dimen/m_300"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@android:style/ButtonBar"
        android:layout_width="@dimen/m_150"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fifty"
        android:backgroundTint="@color/hard_yellow"
        android:background="@drawable/line_10"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/forget_password"/>
    <TextView
        android:id="@+id/tv_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/phone_verification"/>
    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/register"/>

</LinearLayout>