<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.banner.InputBannerActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:id="@+id/lay_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/v_margin"
                android:contentDescription="@string/back"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_arrow_back_ios_new_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/m_70"
                android:text="@string/input_banner"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="@dimen/m_300"
        android:layout_height="126dp"
        android:layout_marginTop="@dimen/fifty"
        android:background="@drawable/line_10"
        android:layout_gravity="center_horizontal"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/m_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/title"
        app:boxCornerRadiusBottomEnd="@dimen/v_margin"
        app:boxCornerRadiusBottomStart="@dimen/v_margin"
        app:boxCornerRadiusTopEnd="@dimen/v_margin"
        app:boxCornerRadiusTopStart="@dimen/v_margin"
        app:endIconMode="clear_text"
        app:startIconTint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_title"
            android:layout_width="@dimen/m_300"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="@dimen/m_300"
        android:layout_height="@dimen/m_150"
        android:layout_gravity="center_horizontal"
        android:singleLine="false"
        android:minLines="6"
        android:lines="10"
        android:maxLines="20"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:autofillHints="description"
        android:background="@drawable/line_10"
        android:inputType="textMultiLine"
        android:padding="@dimen/v_margin"
        android:hint="@string/description"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose"
        android:layout_width="@dimen/m_150"
        android:layout_height="@dimen/fifty"
        android:background="@drawable/line_10"
        android:backgroundTint="@color/grey"
        android:text="@string/choose"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/twenty"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="@dimen/m_150"
        android:layout_height="@dimen/fifty"
        android:background="@drawable/line_10"
        android:text="@string/save"
        android:backgroundTint="@color/hard_yellow"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/twenty"/>

</LinearLayout>