<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.admob.DetailAddActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:id="@+id/lay_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/v_margin"
                android:contentDescription="@string/back"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_arrow_back_ios_new_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/m_70"
                android:text="@string/detail_order"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/img_admob"
        android:layout_width="@dimen/m_200"
        android:layout_height="@dimen/m_200"
        android:layout_below="@id/card_first"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:contentDescription="@string/admob"/>
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:layout_below="@id/img_admob"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="@dimen/m_120"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/line_10"
        android:layout_marginBottom="@dimen/twenty"
        android:backgroundTint="@color/hard_yellow"
        android:text="@string/delete"/>
</RelativeLayout>